--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "mdbreact": "^4.8.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-modal": "^3.6.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
